Fixed big gap at the bottom of feedback popup

--- a/interactiveai/src/assets/styles.css
+++ b/interactiveai/src/assets/styles.css
@@ -459,7 +459,6 @@ iframe {
     justify-content: center;
     align-items: center;
     overflow: hidden!important;
-    height: 35%;
     }
     
 .feedback-popup img{
